--- a/index.html
+++ b/index.html
@@ -18,35 +18,84 @@
 
 <body>
     <header class="container">
-        <h1 class="text-center mt-4">Goriber Bank</h1>
+        <h1 class="text-center my-4">Goriber Bank</h1>
 
     </header>
-    <main class="container bg-secondary bg-opacity-10">
+    <main class="container">
         <section>
+            <!-------------------------- 
+                    Main section img part  
+            ---------------------------->
             <div class="row">
-                <div class="col-md-6">
-                    <img class="img-fluid" src="img/bank.jpg" alt="">
+                <div class="col-md-6 bg-secondary bg-opacity-10">
+                    <img class="img-fluid h-100" src="img/bank.jpg" alt="">
                 </div>
-                <div class="col-md-6 d-flex justify-content-center p-5">
+                <!--------------------- 
+                    Calculation part  
+                ----------------------->
+                <div class="col-md-6 d-flex justify-content-center p-5 bg-secondary bg-opacity-10">
                     <div>
-                        <h3 class="text-center">Income</h3>
+                        <!--------------------- 
+                        income  Calculation part  
+                        ----------------------->
+                        <h3 class="text-center mb-3">Income</h3>
                         <div class="d-flex mt-2">
-                            <label class="fs-5 fw-bold me-2">Income:</label>
+                            <label class="fs-6 fw-bold me-2">Income:</label>
                             <input type="text" class="form-control">
-
                         </div>
-                        <h3 class="text-center">Expense</h3>
+                        <!--------------------- 
+                           expenses  Calculation part  
+                        ----------------------->
+                        <h3 class="text-center my-4">Expenses</h3>
+                        <div class="d-flex flex-column justify-content-center align-items-center">
+                            <div class="d-flex mt-2">
+                                <label class="fs-6 fw-bold me-2">Food:</label>
+                                <input type="text" class="form-control">
+
+                            </div>
+                            <div class="d-flex mt-2">
+                                <label class="fs-6 fw-bold me-2">Rent:</label>
+                                <input type="text" class="form-control">
+
+                            </div>
+                            <div class="d-flex mt-2">
+                                <label class="fs-6 fw-bold me-2">Cloth:</label>
+                                <input type="text" class="form-control">
+
+                            </div>
+                        </div>
+                        <div class="d-flex justify-content-center">
+                            <button class="btn btn-info text-white fs-5 fw-bold py-2 px-5 my-5">Calculate</button>
+                        </div>
+                        <h4 class="text-center mb-3">Total Expenses:$<span>00</span> </h4>
+                        <h4 class="text-center mb-3">Balance:$<span>00</span> </h4>
+
+                        <!--------------------------------- 
+                            Savings Calculation part  
+                    ------------------------------------>
+                        <div>
+                            <div class="d-flex mt-5 justify-content-center align-items-center">
+                                <label class="fs-6 fw-bold me-2">Save:</label>
+                                <input type="text" class="form-control">
+                                <span class="mx-3 fx-5 fw-bold">%</span>
+                                <button class="btn btn-info py-2 px-5 text-white fx-5 fw-bold">Save</button>
+                            </div>
+                            <h4 class="text-center mt-5">Saving Amount:$<span>00</span> </h4>
+                            <h4 class="text-center m-3">Remaining Balance:$<span>00</span> </h4>
+                        </div>
                     </div>
                 </div>
+
             </div>
         </section>
+
 
     </main>
     <footer>
 
     </footer>
     <!-- bootstrap bunddel -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 
