--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header class="container">
-        <h1 class="text-center my-4">Goriber Bank</h1>
+        <h1 class="text-center text-info my-4">Goriber Bank</h1>
 
     </header>
     <main class="container">
@@ -28,7 +28,7 @@
             ---------------------------->
             <div class="row">
                 <div class="col-md-6 bg-secondary bg-opacity-10">
-                    <img class="img-fluid h-100" src="img/bank.jpg" alt="">
+                    <img class="img-fluid h-100" src="img/money.jpg" alt="">
                 </div>
                 <!--------------------- 
                     Calculation part  
@@ -38,10 +38,13 @@
                         <!--------------------- 
                         income  Calculation part  
                         ----------------------->
-                        <h3 class="text-center mb-3">Income</h3>
-                        <div class="d-flex mt-2">
-                            <label class="fs-6 fw-bold me-2">Income:</label>
-                            <input type="text" class="form-control">
+                        <div class="d-flex flex-column 
+                        justify-content-center align-items-center">
+                            <h3 class="text-center mb-3">Income</h3>
+                            <div class="d-flex mt-2">
+                                <label class="fs-6 fw-bold me-2">Income:</label>
+                                <input type="text" class="form-control">
+                            </div>
                         </div>
                         <!--------------------- 
                            expenses  Calculation part  
