--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <h3 class="text-center mb-3">Income</h3>
                             <div class="d-flex mt-2">
                                 <label class="fs-6 fw-bold me-2">Income:</label>
-                                <input type="text" class="form-control">
+                                <input id="income" type="text" class="form-control">
                             </div>
                         </div>
                         <!--------------------- 
@@ -53,25 +53,26 @@
                         <div class="d-flex flex-column justify-content-center align-items-center">
                             <div class="d-flex mt-2">
                                 <label class="fs-6 fw-bold me-2">Food:</label>
-                                <input type="text" class="form-control">
+                                <input id="food-expenses" type="text" class="form-control">
 
                             </div>
                             <div class="d-flex mt-2">
                                 <label class="fs-6 fw-bold me-2">Rent:</label>
-                                <input type="text" class="form-control">
+                                <input id="rent-expenses" type=" text" class="form-control">
 
                             </div>
                             <div class="d-flex mt-2">
                                 <label class="fs-6 fw-bold me-2">Cloth:</label>
-                                <input type="text" class="form-control">
+                                <input id="cloth-expenses" type=" text" class="form-control">
 
                             </div>
                         </div>
                         <div class="d-flex justify-content-center">
-                            <button class="btn btn-info text-white fs-5 fw-bold py-2 px-5 my-5">Calculate</button>
+                            <button id="calculate"
+                                class="btn btn-info text-white fs-5 fw-bold py-2 px-5 my-5">Calculate</button>
                         </div>
-                        <h4 class="text-center mb-3">Total Expenses:$<span>00</span> </h4>
-                        <h4 class="text-center mb-3">Balance:$<span>00</span> </h4>
+                        <h4 class="text-center mb-3">Total Expenses:$<span id="total-expenses">00</span> </h4>
+                        <h4 class="text-center mb-3">Balance:$<span id="balance">00</span> </h4>
 
                         <!--------------------------------- 
                             Savings Calculation part  
