--- a/index.html
+++ b/index.html
@@ -80,12 +80,13 @@
                         <div>
                             <div class="d-flex mt-5 justify-content-center align-items-center">
                                 <label class="fs-6 fw-bold me-2">Save:</label>
-                                <input type="text" class="form-control">
+                                <input id="saving-input" type="text" class="form-control">
                                 <span class="mx-3 fx-5 fw-bold">%</span>
-                                <button class="btn btn-info py-2 px-5 text-white fx-5 fw-bold">Save</button>
+                                <button id="saving-btn"
+                                    class="btn btn-info py-2 px-5 text-white fx-5 fw-bold">Save</button>
                             </div>
-                            <h4 class="text-center mt-5">Saving Amount:$<span>00</span> </h4>
-                            <h4 class="text-center m-3">Remaining Balance:$<span>00</span> </h4>
+                            <h4 class="text-center mt-5">Saving Amount:$<span id="saving-amount">00</span> </h4>
+                            <h4 class="text-center m-3">Remaining Balance:$<span id="remaining-balance">00</span> </h4>
                         </div>
                     </div>
                 </div>
