--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goriber Bank</title>
 
-    <!-- CSS style sheet link -->
-    <link rel="stylesheet" href="style.css">
+    <!-- fontAwesome cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+        integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- bootstrap link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!-- CSS style sheet link -->
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -45,33 +50,44 @@
                                 <label class="fs-6 fw-bold me-2">Income:</label>
                                 <input id="income" type="text" class="form-control">
                             </div>
+                            <div id="income-input-error" class="alert error-sms alert-warning" role="alert">
+                                income can't be less then tatal Expenses or invalid number—check it out!
+                            </div>
                         </div>
                         <!--------------------- 
                            expenses  Calculation part  
                         ----------------------->
-                        <h3 class="text-center my-4">Expenses</h3>
+                        <h3 class=" text-center my-4">Expenses</h3>
                         <div class="d-flex flex-column justify-content-center align-items-center">
                             <div class="d-flex mt-2">
                                 <label class="fs-6 fw-bold me-2">Food:</label>
                                 <input id="food-expenses" type="text" class="form-control">
-
+                            </div>
+                            <div id="food-input-error" class="alert error-sms alert-warning" role="alert">
+                                food Expenses can't be nagative or invalid number—check it out!
                             </div>
                             <div class="d-flex mt-2">
                                 <label class="fs-6 fw-bold me-2">Rent:</label>
                                 <input id="rent-expenses" type=" text" class="form-control">
-
+                            </div>
+                            <div id="rent-input-error" class="alert error-sms alert-warning" role="alert">
+                                You have to pay valid amount of money for stay here invalid amount unacceptable—check it
+                                out!
                             </div>
                             <div class="d-flex mt-2">
                                 <label class="fs-6 fw-bold me-2">Cloth:</label>
                                 <input id="cloth-expenses" type=" text" class="form-control">
-
+                            </div>
+                            <div id="cloth-input-error" class="alert error-sms alert-warning" role="alert">
+                                Enter a valid amount of money for cloths—check it out!
                             </div>
                         </div>
                         <div class="d-flex justify-content-center">
                             <button id="calculate"
                                 class="btn btn-info text-white fs-5 fw-bold py-2 px-5 my-5">Calculate</button>
                         </div>
-                        <h4 class="text-center mb-3">Total Expenses:$<span id="total-expenses">00</span> </h4>
+                        <h4 class="text-center mb-3">Total Expenses:$<span id="total-expenses">00</span>
+                        </h4>
                         <h4 class="text-center mb-3">Balance:$<span id="balance">00</span> </h4>
 
                         <!--------------------------------- 
@@ -85,7 +101,11 @@
                                 <button id="saving-btn"
                                     class="btn btn-info py-2 px-5 text-white fx-5 fw-bold">Save</button>
                             </div>
-                            <h4 class="text-center mt-5">Saving Amount:$<span id="saving-amount">00</span> </h4>
+                            <div id="saving-input-error" class="alert error-sms alert-warning" role="alert">
+                                Income amount , balance or saving amount may be invalid or empty—check it out!
+                            </div>
+                            <h4 class="text-center mt-5">Saving Amount:$<span id="saving-amount">00</span>
+                            </h4>
                             <h4 class="text-center m-3">Remaining Balance:$<span id="remaining-balance">00</span> </h4>
                         </div>
                     </div>
